﻿EQExtractor2 Changelog. All changes since the 1.0 release.

==09/10/2010==
Derision: Identified a few more 'Area' IDs for the new Item slot numbering system.

==09/10/2010==
Derision: Addded ability to call 'Explorer' methods during Packet Dump for use while figuring out packet formats.

==09/08/2010==
Derision: Moved item packet decode into a separate method.

==09/03/2010==
Derision: Added support for version currently on test server (seems like a lot of opcodes have changed values).
Derision: Fixed item Quantity field for Sep 1 patch. Fixed typo in patch .conf file
Derision: Debug text box now resizes with it's parent form.

==08/29/2010==
Derision: Added handling of unencapsulated application packets with flags which were previously being interpreted as unknown opcodes.
		  (Seems to only have affects position update packets).

Derision: Construct grids from both OP_NPCMoveUpdate and OP_MobUpdate packets. Previously, if OP_NPCMoveUpdate packets were sent for a mob,
		  i.e. high-resolution updates, any OP_MobUpdate packets for that mob where ignored.

Derision: Added facility in Options to specify a file to write low level netcode debug information to.
Derision: Decoded Crypto flag from OP_SessionRequest to identify and ignore compressed UCS stream.
Derision: Added error checking when opening netcode debug file.

==08/27/2010==
Derision: Redesigned the UI. Use the menu bar, or the following shortcuts:

			Ctrl-L	Load .PCAP file
			Ctrl-S	Generate SQL
			Ctrl-P	Dump Packets
			Ctrl-V	View Packets
			Ctrl-A	Dump AA
			Ctrl-D	Show Debug Window (hidden by default. Change in Options).
			Ctrl-O	Set Options (these settings persist across sessions).			

Derision: Added the ability to disable removal of redundant waypoints.
Derision: Added an option to only generate SQL for spawns whose name contains a given string.
Derision: Added optional timestamps to packet dump. Added capture date to SQL output.